<resources>
    <string name="app_name">WeatherApp2</string>
    <string name="pressure">Pressure</string>
    <string name="_1_007mbar">1,007mBar</string>
    <string name="humidity">Humidity</string>
    <string name="_49">49%</string>
    <string name="_27_c">27°C</string>
    <string name="_35_c">35°C</string>
    <string name="sunny">Sunny</string>
    <string name="c">°C</string>
    <string name="_33">33</string>
    <string name="sunday_5_may_2023_4_30pm">Sunday, 5 May 2023 | 4:30PM</string>
</resources>